# Speedy

./: .gitignore  ARCHITETTURA.md  CONFIG.md  Cargo.toml  DAEMON-GUARD.md  Justfile  README-WINDOWS.md  README.md  TODO-platform.md  TODO.md  commands.md  flow.md  hybrid.md  instructions.md  todo-fedora.md  todo-gui.md  todo-provider-ai.md  todo-speedylc.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
docs/: COMPLETION-PLAN.md  gui-progress.md  ipc-protocol.md  windows-firewall-tcp.md
scripts/: build-release.ps1  build-release.sh  publish.ps1
scripts/git-hooks/: post-checkout.tpl  post-commit.tpl  post-merge.tpl  post-rewrite.tpl
speedy-test-lc/bash/: deploy.sh
speedy-test-lc/c/: stack.c  stack.h
speedy-test-lc/cpp/: dijkstra.cpp  heap.hpp
speedy-test-lc/csharp/: TaskScheduler.cs
speedy-test-lc/css/: design-system.css
speedy-test-lc/dart/: store.dart
speedy-test-lc/dockerfile/: Dockerfile  docker-compose.yml
speedy-test-lc/elixir/: cache_server.ex
speedy-test-lc/erlang/: counter.erl
speedy-test-lc/go/: store.go  store_test.go
speedy-test-lc/haskell/: Parser.hs
speedy-test-lc/html/: index.html
speedy-test-lc/java/: Account.java  Bank.java
speedy-test-lc/javascript/: api.js  utils.js
speedy-test-lc/json/: openapi.json
speedy-test-lc/jsx/: Button.jsx
speedy-test-lc/julia/: numerics.jl
speedy-test-lc/kotlin/: Repository.kt
speedy-test-lc/lua/: state_machine.lua
speedy-test-lc/markdown/: architecture.md
speedy-test-lc/ocaml/: eval.ml
speedy-test-lc/php/: Container.php
speedy-test-lc/python/: lru_cache.py  (+1 more)
(+15 files in other folders)
